--- a/style.css
+++ b/style.css
@@ -2,22 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
 }
-.header {
-  width: 100%;
+a {
+  text-decoration: none;
+}
+header{
+  width: 90%;
   height: 120px;
-  background-color: blueviolet;
+  margin: 0 auto;
+  text-align: center;
 }
-.header-top {
-  width: 100%;
-  height: 70px;
-  background-color: seashell;
+.header h1{
+  font-size: 32px;
 }
-.header-bottom {
-  width: 100%;
-  height: 50px;
+.nav-list{
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
 }
-
+.nav-item{
+  list-style: none;
+  display: inline-block;
+  margin:0 20px;
+}
 .main-visual {
   width: 100%;
   height: 300px;
@@ -47,8 +55,13 @@
   height: 1300px;
   background-color: palegreen;
 }
-.footer {
+footer {
   width: 100%;
   height: 120px;
-  background-color: sandybrown;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+.footer-text{
+  color: #fff;
 }
